junit тест запускается, но проблема с h2